--- a/sla2.html
+++ b/sla2.html
@@ -79,6 +79,10 @@
             text-align: center;
             line-height: 60px;
         }
+        nav{
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 
